[package]
name = "mmoxi"
version = "0.3.0"
authors = ["Christian Krause <christian.krause@idiv.org>"]
description = "spectrum scale tools"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://docs.rs/mmoxi"
homepage = "https://github.com/idiv-biodiversity/mmoxi"
repository = "https://github.com/idiv-biodiversity/mmoxi"
keywords = ["gpfs", "prometheus", "spectrum-scale"]
categories = ["command-line-utilities", "filesystem"]
edition = "2021"
rust-version = "1.74"

[dependencies]
anyhow = "1"
bstr = "1"
tempfile = "3"

[dependencies.clap]
version = "4"
features = ["cargo", "wrap_help"]

[profile.release]
lto = true
